array.island.Island.scala.error
Compilation error:
Island:10: error: type mismatch;
 found   : Unit
 required: Int
           for (j<-0 to num.length-1){
                 ^